# PySysLinkToolkit

./: LICENSE  pyproject.toml
.github/workflows/: ci.yaml
src/pysyslink_toolkit/: BlockRenderInformation.py  CoreBlockPlugin.py  HighLevelBlock.py  HighLevelSystem.py  LowLevelBlockStructure.py  Plugin.py  PortType.py  SubsystemRenderInformation.py  TextFileManager.py  __init__.py  api.py  cli.py  compile_system.py  load_plugins.py  simulate_system.py
src/pysyslink_toolkit/block_libraries/: BlockLibraryPlugin.py  BlockLibraryPluginConfig.py  CoreBlockLibraryPlugin.py  ParseBlockLibraries.py  SafeEvaluator.py
src/pysyslink_toolkit/block_libraries/system/scope_plugin/: scope_plugin.py
src/pysyslink_toolkit/subsystems/: SubsystemRenderInfoManager.py
src/pysyslink_toolkit/toolkit_config/: ParseToolkitConfig.py  ToolkitConfig.py
tests/: simulation_output.json  test_api.py
tests/data/: dummy.pslk  neuron_output.yaml  neuron_test.pslk  parse_parameters.pslk  sim_options.yaml  simulable_system.yaml  toolkit_config.yaml
tests/plugins/dummy_plugin/: dummy_plugin.pslkblp.yaml  dummy_plugin.pslkp.yaml  dummy_plugin.py
tests/plugins/neuron_plugin/: neuron_plugin.pslkblp.yaml  neuron_plugin.pslkp.yaml  neuron_plugin.py
tests/plugins/scope_plugin/: scope_plugin.pslkblp.yaml  scope_plugin.pslkp.yaml  scope_plugin.py
tests/test_outputs/: output_debug_simulation.yaml  output_test_compile_system.yaml  output_test_compile_system_with_parameters.yaml  output_test_neuron_block_compilation.yaml  output_test_simulation_runs_and_callbacks.json
(+2 files in other folders)
