[project]
name = "pysyslink-toolkit"
version = "0.0.1"
description = "Toolkit for PySysLink block-based dynamic system simulator"
authors = [
    { name = "Pello Usabiaga", email = "pellousabiaga@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]